<resources>
    <!--    Overall     -->
    <string name="app_name">ASTRA</string>
    <string name="systemName_tx">ASTRA</string>

    <!--    Login   -->
    <string name="userName_tx">Nazwa użytkownika</string>
    <string name="password_tx">Hasło</string>
    <string name="loginButton_tx">Zalogowanie</string>
    <string name="registerButton_tx">Rejestracja</string>
    <string name="logout_tx">Logout</string>

    <!--    Main Buttons    -->
    <string name="personalData_tx">Dane os.</string>
    <string name="password_change_tx">Zm. hasła</string>
    <string name="ankieta_tx">Ankieta</string>
    <string name="statystyki_tx">Statystyki</string>

    <!--    Personal data popup     -->
    <string name="imie_tx">Imię</string>
    <string name="nazwisko_tx">Nazwisko</string>
    <string name="nieokreslona_tx">Nieokreślona</string>
    <string name="mezczyzna_tx">Mężczyzna</string>
    <string name="kobieta_tx">Kobieta</string>
    <string name="data_urodzenia_tx">Data urodzenia:</string>
    <string name="nie_podano_tx">nie podano</string>
    <string name="wzrost_tx">Wzrost</string>
    <string name="waga_tx">Waga</string>
    <string name="pocz_tek_choroby_tx">Początek choroby:</string>
    <string name="zapisz_tx">Zapisz</string>
    <string name="cofnij_tx">Cofnij</string>

    <!--    Change password popup    -->
    <string name="nowe_haslo_tx">Nowe hasło</string>
    <string name="zmien_haslo_tx">Zmień</string>
    <string name="anuluj_zmiane_hasla_tx">Anuluj</string>

    <!--    Questions  -->
    <string name="p1">Jak często w ciągu ostatnich 4 tygodni Pana/i astma powstrzymywała Pana/nią od wykonywania zwykłych czynności w pracy, w szkole/na uczelni lub w domu?</string>
    <string name="o11">zawsze</string>
    <string name="o12">bardzo często</string>
    <string name="o13">czasami</string>
    <string name="o14">rzadko</string>
    <string name="o15">wcale</string>
    <string name="p2">Jak często w ciągu ostatnich 4 tygodni miał/a Pan/i duszności?</string>
    <string name="o21">częściej niż raz dziennie</string>
    <string name="o22">raz dziennie</string>
    <string name="o23">3 do 6 razy w tygodniu</string>
    <string name="o24">raz lub dwa razy w tygodniu</string>
    <string name="o25">wcale</string>
    <string name="p3">Jak często w ciągu ostatnich 4 tygodni budził/a się Pan/i w nocy lub rano, wcześniej niż zwykle, z powodu objawów związanych z astmą (np. świszczący oddech, kaszel, duszności, ucisk lub ból w klatce piersiowej)?</string>
    <string name="o31">4 noce w tygodniu lub częściej</string>
    <string name="o32">2 do 3 noce w tygodniu</string>
    <string name="o33">raz w tygodniu</string>
    <string name="o34">raz lub dwa</string>
    <string name="o35">wcale</string>
    <string name="p4">Jak często w ciągu ostatnich 4 tygodni używał/a Pan/i szybko działającego leku doraźnego?</string>
    <string name="o41">3 razy dziennie lub częściej</string>
    <string name="o42">1 lub dwa razy dziennie</string>
    <string name="o43">2 lub 3 razy dziennie</string>
    <string name="o44">raz w tygodniu</string>
    <string name="o45">wcale</string>
    <string name="p5">Jak ocenił/a/by Pan/i swoją kontrolę nad astmą w ciągu ostatnich 4 tygodni?</string>
    <string name="o51">w ogóle nie kontrolowana</string>
    <string name="o52">słabo kontrolowana</string>
    <string name="o53">umiarkowanie kontrolowana</string>
    <string name="o54">dobrze kontrolowana</string>
    <string name="o55">w pełni kontrolowana</string>

    <!--    TMP     -->
    <string name="text_tx">TEXT</string>

    <!--    RODO    -->
    <string name="rodo_tx">
        Naciśnięcie przycisku REJESTRACJA oznacza wyrażenie zgody na przechowywanie i przetwarzanie danych wprowadzanych do systemu zgodnie z Zasadami Ochrony Danych Osobowych zbieranych w systemie opracowanymi w zgodzie z RODO.\n\n
        Zasady Ochrony Danych Osobowych zbieranych w systemie:\n
        1. Administratorem danych osobowych w systemie jest jej twórca, tzn. Dominik Bazan.\n
        2. Podanie danych osobowych jest koniecznym wymogiem poprawnego działania systemu.\n
        3. Dane będą przetwarzane w sposób zautomatyzowany w celu umożliwienia działania funkcji aplikacji.\n
        4. Dane osobowe będą przechowywane do czasu odwołania zgody przez użytkowników na ich przechowywanie lub zakończenia użytkowania systemu.\n
        5. Posiadają Państwo prawo dostępu do treści swoich danych oraz prawo do ich sprostowania i usunięcia, a także prawo do cofnięcia zgody w dowolnym momencie na ich przechowywanie i przetwarzanie.\n
        6. Mają Państwo prawo wniesienia skargi do Prezesa Urzędu Ochrony Danych Osobowych w zakresie naruszenia prawa do ochrony danych osobowych lub innych praw przyznanych na mocy RODO.
    </string>
    <string name="data">Data</string>
    <string name="_25">25</string>
    <string name="przyj_te">Przyjęte</string>
    <string name="du_y">Duży</string>
    <string name="mocny">Mocny</string>
    <string name="_25_st_c">25 st.C</string>
    <string name="brzoza_3_nbrzoza_3_nbrzoza_3_nbrzoza_3_n">Brzoza 3 Brzoza 3 Brzoza 3 Brzoza 3</string>
    <string name="nazwa_nowej_alergii">Nazwa nowej alergii</string>
    <string name="dodaj">Dodaj</string>
    <string name="anuluj">Anuluj</string>
    <string name="nazwa_nowego_leku">Nazwa nowego leku</string>
    <string name="dodaj">Dodaj</string>
    <string name="anuluj">Anuluj</string>
    <string name="tu_wprwadz_email_nna_kt_ry_wysy_asz_swoje_statystyki_nuwa_aj_komu_je_udost_pniasz">Tu wprwadz email, na który wysyłasz swoje statystyki. Uważaj komu je udostępniasz!:</string>
    <string name="xxxxx_poczta_com">xxxxx@poczta.com</string>
    <string name="udost_pnij">Udostępnij</string>
    <string name="wy_lij_swoje_statystyki">Wyślij swoje statystyki</string>

    <!--    No assignment  -->


</resources>
