<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/userName_tx"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="6dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_tx"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:layout_editor_absoluteX="12dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/loginButton_tx"
            android:textSize="@dimen/text_size_small_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/registerButton_tx"
            android:textSize="@dimen/text_size_small_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:padding="30px"
            android:text="@string/rodo_tx"
            app:layout_constraintTop_toBottomOf="@+id/register"
            tools:layout_editor_absoluteX="15dp"
            android:background="@color/rodo_background"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
